--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
 </head>
 <body>
   
+  <!-- Page Container -->
+  <div class="container">
+    <!-- Page Background -->
+      <div class="page-background"></div>
+    <!-- End of Page Background -->
+  </div>
+  <!-- End of Page Container -->
+
 </body>
 </html>
