added mouse circle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,22 @@
   <link rel="stylesheet" href="./style.css">
   <script src="./script.js" defer></script>
 </head>
+
 <body>
-  
+
+  <!-- Mouse Cirlce -->
+  <div class="mouse-circle"></div>
+  <div class="mouse-dot"></div>
+  <!-- End of Mouse Cirlce -->
+
   <!-- Page Container -->
   <div class="container">
     <!-- Page Background -->
-      <div class="page-background"></div>
+    <div class="page-background"></div>
     <!-- End of Page Background -->
   </div>
   <!-- End of Page Container -->
 
 </body>
+
 </html>
