--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
     <!-- Page Background -->
     <div class="page-background"></div>
     <!-- End of Page Background -->
+
+    <!-- Section 1 -->
+    <section class="section-1">
+      <!-- Logo -->
+      <a href="#" class="logo">Soloman Garcia</a>
+      <!-- End of Logo -->
+
+      <!-- Animated Circles -->
+      <div class="circles">
+        <div class="circle circle-1"></div>
+        <div class="circle circle-2"></div>
+        <div class="circle circle-3"></div>
+        <div class="circle circle-4"></div>
+      </div>
+      <div class="main-circle">
+        <img src="./images/landing/designer.jpg" alt="Photo of Soloman Garcia">
+      </div>
+      <!-- End of Animated Circles -->
+
+      <!-- Featured Text -->
+      <h4 class="featured-text featured-text-1">Front End</h4>
+      <h4 class="featured-text featured-text-2">Web Developer</h4>
+      <!-- End of Featured Text -->
+    </section>
+    <!-- End of Section 1 -->
   </div>
   <!-- End of Page Container -->
 
