add styling to section 1

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- End of Page Background -->
 
     <!-- Section 1 -->
-    <section class="section-1">
+    <section class="section-1 center">
       <!-- Logo -->
       <a href="#" class="logo">Soloman Garcia</a>
       <!-- End of Logo -->
@@ -36,7 +36,7 @@
         <div class="circle circle-3"></div>
         <div class="circle circle-4"></div>
       </div>
-      <div class="main-circle">
+      <div class="main-circle center">
         <img src="./images/landing/designer.jpg" alt="Photo of Soloman Garcia">
       </div>
       <!-- End of Animated Circles -->
