--- a/index.html
+++ b/index.html
@@ -81,6 +81,49 @@
       <!-- End of Main Button -->
     </section>
     <!-- End of Section 2 -->
+
+    <!-- Section 3 -->
+    <section class="section-3">
+      <!-- Section 3 Heading -->
+      <h1 class="section-3-heading">My Projects</h1>
+      <!-- End of Section 3 Heading -->
+
+      <!-- Projects -->
+      <div class="projects center">
+        <div class="project">
+          <img src="./images/projects/project-1.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-2.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-3.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-4.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-5.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-6.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-7.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-8.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-9.jpg" alt="">
+        </div>
+        <div class="project">
+          <img src="./images/projects/project-10.jpg" alt="">
+        </div>
+      </div>
+      <!-- End of Projects -->
+    </section>
+    <!-- End of Section 3 -->
   </div>
   <!-- End of Page Container -->
 
