work on closing big images

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
           <img src="./images/projects/project-10.jpg" alt="">
         </div>
       </div>
+      <!-- Project Hide Button -->
+      <!-- End of Project Hide Button -->
+      <button class="project-hide-btn">&laquo;Close</button>
       <!-- End of Projects -->
     </section>
     <!-- End of Section 3 -->
