--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
       <!-- End of Project Hide Button -->
       <button class="project-hide-btn">&laquo;Close</button>
       <!-- End of Projects -->
+
+       <!-- Projets Button -->
+       <a href="#" class="main-btn projects-btn">
+        <div class="main-btn-content center">
+          <div class="main-btn-line"></div>
+          <div class="main-btn-line"></div>
+          <div class="main-btn-line"></div>
+          <span>Show More</span>
+        </div>
+      </a>
+      <!-- End of Projects Button -->
     </section>
     <!-- End of Section 3 -->
   </div>
