--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Section 2 -->
     <section class="section-2">
       <!-- Section 2 Heading -->
-      <h1 class="section-2-heading">About Me</h1>
+      <h1 class="section-heading">About Me</h1>
       <!-- End of Section 2 Heading -->
 
       <!-- About Me Text -->
@@ -85,7 +85,7 @@
     <!-- Section 3 -->
     <section class="section-3">
       <!-- Section 3 Heading -->
-      <h1 class="section-3-heading">My Projects</h1>
+      <h1 class="section-heading">My Projects</h1>
       <!-- End of Section 3 Heading -->
 
       <!-- Projects -->
@@ -126,8 +126,8 @@
       <button class="project-hide-btn">&laquo;Close</button>
       <!-- End of Projects -->
 
-       <!-- Projets Button -->
-       <a href="#" class="main-btn projects-btn">
+      <!-- Projets Button -->
+      <a href="#" class="main-btn projects-btn">
         <div class="main-btn-content center">
           <div class="main-btn-line"></div>
           <div class="main-btn-line"></div>
