debug skill section font

--- a/index.html
+++ b/index.html
@@ -138,6 +138,43 @@
       <!-- End of Projects Button -->
     </section>
     <!-- End of Section 3 -->
+
+    <!-- Section 4 -->
+    <section class="section-4">
+      <!-- Section 4 Heading -->
+      <h1 class="section-heading">Skills</h1>
+      <!-- End of Section 4 Heading -->
+
+      <!-- Skills -->
+      <div class="skills-wrapper center">
+        <div class="skill">
+          <a href="#" class="skill-btn"><span>Skill 1</span></a>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
+        </div>
+        <div class="skill">
+          <a href="#" class="skill-btn"><span>Skill 2</span></a>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
+        </div>
+        <div class="skill">
+          <a href="#" class="skill-btn"><span>Skill 3</span></a>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
+        </div>
+        <div class="skill">
+          <a href="#" class="skill-btn"><span>Skill 4</span></a>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
+        </div>
+        <div class="skill">
+          <a href="#" class="skill-btn"><span>Skill 5</span></a>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
+        </div>
+        <div class="skill">
+          <a href="#" class="skill-btn"><span>Skill 6</span></a>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
+        </div>
+      </div>
+      <!-- End of Skills -->
+    </section>
+    <!-- End of Section 4 -->
   </div>
   <!-- End of Page Container -->
 
