--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="project">
           <img src="./images/projects/project-5.jpg" alt="">
         </div>
-        <div class="project">
+       <!--  <div class="project">
           <img src="./images/projects/project-6.jpg" alt="">
         </div>
         <div class="project">
@@ -119,7 +119,7 @@
         </div>
         <div class="project">
           <img src="./images/projects/project-10.jpg" alt="">
-        </div>
+        </div> -->
       </div>
       <!-- Project Hide Button -->
       <!-- End of Project Hide Button -->
