--- a/index.html
+++ b/index.html
@@ -23,8 +23,27 @@
     <div class="page-background"></div>
     <!-- End of Page Background -->
 
+    <!--Navigation -->
+    <!-- Menu Icon -->
+    <div class="menu-icon center">
+      <div class="menu-icon-line"></div>
+      <div class="menu-icon-line"></div>
+    </div>
+    <!-- End of Menu Icon -->
+
+    <!-- Navbar -->
+    <!-- End of Navbar -->
+    <nav class="navbar">
+      <a href="#section-1" class="navbar-link">Home</a>
+      <a href="#section-2" class="navbar-link">About</a>
+      <a href="#section-3" class="navbar-link">Projects</a>
+      <a href="#section-4" class="navbar-link">Skills</a>
+      <a href="#section-5" class="navbar-link">Contact</a>
+    </nav>
+    <!-- End of Navigation -->
+
     <!-- Section 1 -->
-    <section class="section-1 center">
+    <section class="section-1 center" id="section-1">
       <!-- Logo -->
       <a href="#" class="logo">Soloman Garcia</a>
       <!-- End of Logo -->
@@ -60,7 +79,7 @@
     <!-- End of Section 1 -->
 
     <!-- Section 2 -->
-    <section class="section-2">
+    <section class="section-2" id="section-2">
       <!-- Section 2 Heading -->
       <h1 class="section-heading">About Me</h1>
       <!-- End of Section 2 Heading -->
@@ -83,7 +102,7 @@
     <!-- End of Section 2 -->
 
     <!-- Section 3 -->
-    <section class="section-3">
+    <section class="section-3" id="section-3">
       <!-- Section 3 Heading -->
       <h1 class="section-heading">My Projects</h1>
       <!-- End of Section 3 Heading -->
@@ -140,7 +159,7 @@
     <!-- End of Section 3 -->
 
     <!-- Section 4 -->
-    <section class="section-4">
+    <section class="section-4" id="section-4">
       <!-- Section 4 Heading -->
       <h1 class="section-heading">Skills</h1>
       <!-- End of Section 4 Heading -->
@@ -148,27 +167,27 @@
       <!-- Skills -->
       <div class="skills-wrapper center">
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Skill 1</span></a>
+          <a href="#" class="skill-btn"><span>Accessibility</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Skill 2</span></a>
+          <a href="#" class="skill-btn"><span>Responsive Design</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Skill 3</span></a>
+          <a href="#" class="skill-btn"><span>Version Control</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Skill 4</span></a>
+          <a href="#" class="skill-btn"><span>JavaScript</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Skill 5</span></a>
+          <a href="#" class="skill-btn"><span>React</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Skill 6</span></a>
+          <a href="#" class="skill-btn"><span>Soft Skills</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
       </div>
@@ -177,7 +196,7 @@
     <!-- End of Section 4 -->
 
     <!-- Section 5 -->
-    <section class="section-5 center">
+    <section class="section-5 center" id="section-5">
       <!-- Section 5 Heading -->
       <h1 class="section-heading">Contact Me</h1>
       <!-- End of Section 5 Heading -->
