--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <div class="page-background"></div>
     <!-- End of Page Background -->
 
+    <!-- Progress Bar -->
+    <a href="#" class="progress-bar center">
+      <div class="half-circle"></div>
+      <div class="half-circle"></div>
+      <div class="half-circle-top"></div>
+      <div class="progress-bar-circle center">&#8595;</div>
+    </a>
+    <!-- End of Progress Bar -->
+
     <!--Navigation -->
     <!-- Menu Icon -->
     <div class="menu-icon center">
