working on progress bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Soloman Garcia | Web Developer</title>
   <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" defer></script>
+
 </head>
 
 <body>
@@ -65,7 +65,7 @@
         <div class="circle circle-4"></div>
       </div>
       <div class="main-circle center">
-        <img src="./images/landing/designer.jpg" alt="Photo of Soloman Garcia">
+        <img src="./images/landing/designer.jpg">
       </div>
       <!-- End of Animated Circles -->
 
@@ -75,7 +75,7 @@
       <!-- End of Featured Text -->
 
       <!-- Main Button -->
-      <a href="#" class="main-btn">
+      <a href="#section-3" class="main-btn">
         <div class="main-btn-content center">
           <div class="main-btn-line"></div>
           <div class="main-btn-line"></div>
@@ -246,7 +246,7 @@
     <!-- End of Section 5 -->
   </div>
   <!-- End of Page Container -->
-
+  <script src="./script.js"></script>
 </body>
 
 </html>
