create sticky element

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- End of Page Background -->
 
     <!-- Progress Bar -->
-    <a href="#" class="progress-bar center">
+    <a href="#" class="progress-bar center sticky">
       <div class="half-circle"></div>
       <div class="half-circle"></div>
       <div class="half-circle-top"></div>
@@ -34,7 +34,7 @@
 
     <!--Navigation -->
     <!-- Menu Icon -->
-    <div class="menu-icon center">
+    <div class="menu-icon center sticky">
       <div class="menu-icon-line"></div>
       <div class="menu-icon-line"></div>
     </div>
@@ -98,7 +98,7 @@
       <!-- End of About Me Text -->
 
       <!-- Main Button -->
-      <a href="#" class="main-btn">
+      <a href="#section-5" class="main-btn">
         <div class="main-btn-content center">
           <div class="main-btn-line"></div>
           <div class="main-btn-line"></div>
