work on mousecircle effect

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <!-- Navbar -->
     <!-- End of Navbar -->
     <nav class="navbar">
-      <a href="#section-1" class="navbar-link">Home</a>
-      <a href="#section-2" class="navbar-link">About</a>
-      <a href="#section-3" class="navbar-link">Projects</a>
-      <a href="#section-4" class="navbar-link">Skills</a>
-      <a href="#section-5" class="navbar-link">Contact</a>
+      <a href="#section-1" class="navbar-link pointer-enter">Home</a>
+      <a href="#section-2" class="navbar-link pointer-enter">About</a>
+      <a href="#section-3" class="navbar-link pointer-enter">Projects</a>
+      <a href="#section-4" class="navbar-link pointer-enter">Skills</a>
+      <a href="#section-5" class="navbar-link pointer-enter">Contact</a>
     </nav>
     <!-- End of Navigation -->
 
@@ -71,7 +71,7 @@
 
       <!-- Featured Text -->
       <h4 class="featured-text featured-text-1">Front End</h4>
-      <h4 class="featured-text featured-text-2">Web Developer</h4>
+      <h4 class="featured-text featured-text-2">Developer</h4>
       <!-- End of Featured Text -->
 
       <!-- Main Button -->
@@ -118,19 +118,19 @@
 
       <!-- Projects -->
       <div class="projects center">
-        <div class="project">
+        <div class="project pointer-enter">
           <img src="./images/projects/project-1.jpg" alt="">
         </div>
-        <div class="project">
+        <div class="project pointer-enter">
           <img src="./images/projects/project-2.jpg" alt="">
         </div>
-        <div class="project">
+        <div class="project pointer-enter">
           <img src="./images/projects/project-3.jpg" alt="">
         </div>
-        <div class="project">
+        <div class="project pointer-enter">
           <img src="./images/projects/project-4.jpg" alt="">
         </div>
-        <div class="project">
+        <div class="project pointer-enter">
           <img src="./images/projects/project-5.jpg" alt="">
         </div>
         <!--  <div class="project">
@@ -176,27 +176,27 @@
       <!-- Skills -->
       <div class="skills-wrapper center">
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Accessibility</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Accessibility</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Responsive Design</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Responsive Design</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Version Control</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Version Control</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>JavaScript</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>JavaScript</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>React</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>React</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn"><span>Soft Skills</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Soft Skills</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
       </div>
@@ -214,11 +214,11 @@
       <div class="form-wrapper">
         <h2 class="form-heading">Let's Talk</h2>
         <form class="contact-form center">
-          <input type="text" class="contact-form-input" placeholder="Name">
-          <input type="email" class="contact-form-input" placeholder="Email">
-          <input type="text" class="contact-form-input" placeholder="Subject">
-          <textarea class="contact-form-input contact-form-textarea" placeholder="Message"></textarea>
-          <input type="submit" class="form-submit-btn" value="Send Request">
+          <input type="text" class="contact-form-input pointer-enter" placeholder="Name">
+          <input type="email" class="contact-form-input pointer-enter" placeholder="Email">
+          <input type="text" class="contact-form-input pointer-enter" placeholder="Subject">
+          <textarea class="contact-form-input contact-form-textarea pointer-enter" placeholder="Message"></textarea>
+          <input type="submit" class="form-submit-btn pointer-enter" value="Send Request">
         </form>
       </div>
       <!-- End of Form -->
