work on media queries

--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
       <!-- Skills -->
       <div class="skills-wrapper center">
         <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Accessibility</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Html</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Responsive Design</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Css</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Version Control</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Git</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
