--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- End of Animated Circles -->
 
       <!-- Featured Text -->
-      <h4 class="featured-text featured-text-1">Front End</h4>
+      <h4 class="featured-text featured-text-1">Front-End</h4>
       <h4 class="featured-text featured-text-2">Developer</h4>
       <!-- End of Featured Text -->
 
@@ -90,7 +90,7 @@
     <!-- Section 2 -->
     <section class="section-2" id="section-2">
       <!-- Section 2 Heading -->
-      <h1 class="section-heading">About Me</h1>
+      <h1 class="section-heading">About</h1>
       <!-- End of Section 2 Heading -->
 
       <!-- About Me Text -->
@@ -113,7 +113,7 @@
     <!-- Section 3 -->
     <section class="section-3" id="section-3">
       <!-- Section 3 Heading -->
-      <h1 class="section-heading">My Projects</h1>
+      <h1 class="section-heading">Projects</h1>
       <!-- End of Section 3 Heading -->
 
       <!-- Projects -->
@@ -207,7 +207,7 @@
     <!-- Section 5 -->
     <section class="section-5 center" id="section-5">
       <!-- Section 5 Heading -->
-      <h1 class="section-heading">Contact Me</h1>
+      <h1 class="section-heading">Contact</h1>
       <!-- End of Section 5 Heading -->
 
       <!-- Form -->
@@ -218,10 +218,11 @@
           <p class="message">Error Message</p>
           <input type="text" class="contact-form-input pointer-enter" placeholder="Email" id="email" autocomplete="off">
           <p class="message">Erroe Message</p>
-          <input type="text" class="contact-form-input pointer-enter" placeholder="Subject" id="subject" autocomplete="off">
+          <input type="text" class="contact-form-input pointer-enter" placeholder="Subject" id="subject"
+            autocomplete="off">
           <p class="message">Error Message</p>
-          <textarea class="contact-form-input contact-form-textarea pointer-enter" placeholder="Message"
-            id="message" autocomplete="off"></textarea>
+          <textarea class="contact-form-input contact-form-textarea pointer-enter" placeholder="Message" id="message"
+            autocomplete="off"></textarea>
           <p class="message">Error Message</p>
           <input type="submit" class="form-submit-btn pointer-enter" value="Send Request">
         </form>
