update skills section

--- a/index.html
+++ b/index.html
@@ -176,15 +176,11 @@
       <!-- Skills -->
       <div class="skills-wrapper center">
         <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Html</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Accessibility</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Css</span></a>
-          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
-        </div>
-        <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Git</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Responsive Design</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
@@ -196,9 +192,13 @@
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
         <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Soft Skills</span></a>
+          <a href="#" class="skill-btn pointer-enter"><span>Tools</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div>
+        <!-- <div class="skill">
+          <a href="#" class="skill-btn pointer-enter"><span>Soft Skills</span></a>
+          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
+        </div> -->
       </div>
       <!-- End of Skills -->
     </section>
