--- a/index.html
+++ b/index.html
@@ -1,139 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Soloman Garcia | Web Developer</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Soloman Garcia | Web Developer</title>
-  <link rel="stylesheet" href="./style.css">
+  <body>
+    <!-- Mouse Cirlce -->
+    <div class="mouse-circle"></div>
+    <div class="mouse-dot"></div>
+    <!-- End of Mouse Cirlce -->
 
-</head>
+    <!-- Page Container -->
+    <div class="container">
+      <!-- Page Background -->
+      <div class="page-background"></div>
+      <!-- End of Page Background -->
 
-<body>
-
-  <!-- Mouse Cirlce -->
-  <div class="mouse-circle"></div>
-  <div class="mouse-dot"></div>
-  <!-- End of Mouse Cirlce -->
-
-  <!-- Page Container -->
-  <div class="container">
-    <!-- Page Background -->
-    <div class="page-background"></div>
-    <!-- End of Page Background -->
-
-    <!-- Progress Bar -->
-    <a href="#" class="progress-bar center sticky">
-      <div class="half-circle"></div>
-      <div class="half-circle"></div>
-      <div class="half-circle-top"></div>
-      <div class="progress-bar-circle center">&#8595;</div>
-    </a>
-    <!-- End of Progress Bar -->
-
-    <!--Navigation -->
-    <!-- Menu Icon -->
-    <div class="menu-icon center sticky">
-      <div class="menu-icon-line"></div>
-      <div class="menu-icon-line"></div>
-    </div>
-    <!-- End of Menu Icon -->
-
-    <!-- Navbar -->
-    <!-- End of Navbar -->
-    <nav class="navbar">
-      <a href="#section-1" class="navbar-link pointer-enter">Home</a>
-      <a href="#section-2" class="navbar-link pointer-enter">About</a>
-      <a href="#section-3" class="navbar-link pointer-enter">Projects</a>
-      <a href="#section-4" class="navbar-link pointer-enter">Skills</a>
-      <a href="#section-5" class="navbar-link pointer-enter">Contact</a>
-    </nav>
-    <!-- End of Navigation -->
-
-    <!-- Section 1 -->
-    <section class="section-1 center" id="section-1">
-      <!-- Logo -->
-      <a href="#" class="logo">Soloman Garcia</a>
-      <!-- End of Logo -->
-
-      <!-- Animated Circles -->
-      <div class="circles">
-        <div class="circle circle-1"></div>
-        <div class="circle circle-2"></div>
-        <div class="circle circle-3"></div>
-        <div class="circle circle-4"></div>
-      </div>
-      <div class="main-circle center">
-        <img src="./images/landing/designer.jpg">
-      </div>
-      <!-- End of Animated Circles -->
-
-      <!-- Featured Text -->
-      <h4 class="featured-text featured-text-1">Front-End</h4>
-      <h4 class="featured-text featured-text-2">Developer</h4>
-      <!-- End of Featured Text -->
-
-      <!-- Main Button -->
-      <a href="#section-3" class="main-btn">
-        <div class="main-btn-content center">
-          <div class="main-btn-line"></div>
-          <div class="main-btn-line"></div>
-          <div class="main-btn-line"></div>
-          <span>Projects</span>
-        </div>
+      <!-- Progress Bar -->
+      <a href="#" class="progress-bar center sticky">
+        <div class="half-circle"></div>
+        <div class="half-circle"></div>
+        <div class="half-circle-top"></div>
+        <div class="progress-bar-circle center">&#8595;</div>
       </a>
-      <!-- End of Main Button -->
-    </section>
-    <!-- End of Section 1 -->
+      <!-- End of Progress Bar -->
 
-    <!-- Section 2 -->
-    <section class="section-2" id="section-2">
-      <!-- Section 2 Heading -->
-      <h1 class="section-heading">About</h1>
-      <!-- End of Section 2 Heading -->
+      <!--Navigation -->
+      <!-- Menu Icon -->
+      <div class="menu-icon center sticky">
+        <div class="menu-icon-line"></div>
+        <div class="menu-icon-line"></div>
+      </div>
+      <!-- End of Menu Icon -->
 
-      <!-- About Me Text -->
-      <p class="about-me-text"></p>
-      <!-- End of About Me Text -->
+      <!-- Navbar -->
+      <!-- End of Navbar -->
+      <nav class="navbar">
+        <a href="#section-1" class="navbar-link pointer-enter">Home</a>
+        <a href="#section-2" class="navbar-link pointer-enter">About</a>
+        <a href="#section-3" class="navbar-link pointer-enter">Projects</a>
+        <a href="#section-4" class="navbar-link pointer-enter">Skills</a>
+        <a href="#section-5" class="navbar-link pointer-enter">Contact</a>
+      </nav>
+      <!-- End of Navigation -->
 
-      <!-- Main Button -->
-      <a href="#section-5" class="main-btn">
-        <div class="main-btn-content center">
-          <div class="main-btn-line"></div>
-          <div class="main-btn-line"></div>
-          <div class="main-btn-line"></div>
-          <span>Let's Talk</span>
-        </div>
-      </a>
-      <!-- End of Main Button -->
-    </section>
-    <!-- End of Section 2 -->
+      <!-- Section 1 -->
+      <section class="section-1 center" id="section-1">
+        <!-- Logo -->
+        <a href="#" class="logo">Soloman Garcia</a>
+        <!-- End of Logo -->
 
-    <!-- Section 3 -->
-    <section class="section-3" id="section-3">
-      <!-- Section 3 Heading -->
-      <h1 class="section-heading">Projects</h1>
-      <!-- End of Section 3 Heading -->
+        <!-- Animated Circles -->
+        <div class="circles">
+          <div class="circle circle-1"></div>
+          <div class="circle circle-2"></div>
+          <div class="circle circle-3"></div>
+          <div class="circle circle-4"></div>
+        </div>
+        <div class="main-circle center">
+          <img src="./images/landing/designer.jpg" />
+        </div>
+        <!-- End of Animated Circles -->
 
-      <!-- Projects -->
-      <div class="projects center">
-        <div class="project pointer-enter">
-          <img src="./images/projects/project-1.jpg" alt="">
-        </div>
-        <div class="project pointer-enter">
-          <img src="./images/projects/project-2.jpg" alt="">
-        </div>
-        <div class="project pointer-enter">
-          <img src="./images/projects/project-3.jpg" alt="">
-        </div>
-        <div class="project pointer-enter">
-          <img src="./images/projects/project-4.jpg" alt="">
-        </div>
-        <div class="project pointer-enter">
-          <img src="./images/projects/project-5.jpg" alt="">
-        </div>
-        <!--  <div class="project">
+        <!-- Featured Text -->
+        <h4 class="featured-text featured-text-1">Front-End</h4>
+        <h4 class="featured-text featured-text-2">Developer</h4>
+        <!-- End of Featured Text -->
+
+        <!-- Main Button -->
+        <a href="#section-3" class="main-btn">
+          <div class="main-btn-content center">
+            <div class="main-btn-line"></div>
+            <div class="main-btn-line"></div>
+            <div class="main-btn-line"></div>
+            <span>Projects</span>
+          </div>
+        </a>
+        <!-- End of Main Button -->
+      </section>
+      <!-- End of Section 1 -->
+
+      <!-- Section 2 -->
+      <section class="section-2" id="section-2">
+        <!-- Section 2 Heading -->
+        <h1 class="section-heading">About</h1>
+        <!-- End of Section 2 Heading -->
+
+        <!-- About Me Text -->
+        <p class="about-me-text"></p>
+        <!-- End of About Me Text -->
+
+        <!-- Main Button -->
+        <a href="#section-5" class="main-btn">
+          <div class="main-btn-content center">
+            <div class="main-btn-line"></div>
+            <div class="main-btn-line"></div>
+            <div class="main-btn-line"></div>
+            <span>Let's Talk</span>
+          </div>
+        </a>
+        <!-- End of Main Button -->
+      </section>
+      <!-- End of Section 2 -->
+
+      <!-- Section 3 -->
+      <section class="section-3" id="section-3">
+        <!-- Section 3 Heading -->
+        <h1 class="section-heading">Projects</h1>
+        <!-- End of Section 3 Heading -->
+
+        <!-- Projects -->
+        <div class="projects center">
+          <div class="project pointer-enter">
+            <img src="./images/projects/project-1.jpg" alt="" />
+          </div>
+          <div class="project pointer-enter">
+            <img src="./images/projects/project-2.jpg" alt="" />
+          </div>
+          <div class="project pointer-enter">
+            <img src="./images/projects/project-3.jpg" alt="" />
+          </div>
+          <div class="project pointer-enter">
+            <img src="./images/projects/project-4.jpg" alt="" />
+          </div>
+          <div class="project pointer-enter">
+            <img src="./images/projects/project-5.jpg" alt="" />
+          </div>
+          <!--  <div class="project">
           <img src="./images/projects/project-6.jpg" alt="">
         </div>
         <div class="project">
@@ -148,111 +145,156 @@
         <div class="project">
           <img src="./images/projects/project-10.jpg" alt="">
         </div> -->
-      </div>
-      <!-- Project Hide Button -->
-      <!-- End of Project Hide Button -->
-      <button class="project-hide-btn">&laquo;Close</button>
-      <!-- End of Projects -->
+        </div>
+        <!-- Project Hide Button -->
+        <!-- End of Project Hide Button -->
+        <button class="project-hide-btn">&laquo;Close</button>
+        <!-- End of Projects -->
 
-      <!-- Projets Button -->
-      <a href="#" class="main-btn projects-btn">
-        <div class="main-btn-content center">
-          <div class="main-btn-line"></div>
-          <div class="main-btn-line"></div>
-          <div class="main-btn-line"></div>
-          <span>Show More</span>
-        </div>
-      </a>
-      <!-- End of Projects Button -->
-    </section>
-    <!-- End of Section 3 -->
+        <!-- Projets Button -->
+        <a href="#" class="main-btn projects-btn">
+          <div class="main-btn-content center">
+            <div class="main-btn-line"></div>
+            <div class="main-btn-line"></div>
+            <div class="main-btn-line"></div>
+            <span>Show More</span>
+          </div>
+        </a>
+        <!-- End of Projects Button -->
+      </section>
+      <!-- End of Section 3 -->
 
-    <!-- Section 4 -->
-    <section class="section-4" id="section-4">
-      <!-- Section 4 Heading -->
-      <h1 class="section-heading">Skills</h1>
-      <!-- End of Section 4 Heading -->
+      <!-- Section 4 -->
+      <section class="section-4" id="section-4">
+        <!-- Section 4 Heading -->
+        <h1 class="section-heading">Skills</h1>
+        <!-- End of Section 4 Heading -->
 
-      <!-- Skills -->
-      <div class="skills-wrapper center">
-        <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Accessibility</span></a>
-          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
-        </div>
-        <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Responsive Design</span></a>
-          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
-        </div>
-        <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>JavaScript</span></a>
-          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
-        </div>
-        <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>React</span></a>
-          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
-        </div>
-        <div class="skill">
-          <a href="#" class="skill-btn pointer-enter"><span>Tools</span></a>
-          <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
-        </div>
-        <!-- <div class="skill">
+        <!-- Skills -->
+        <div class="skills-wrapper center">
+          <div class="skill">
+            <a href="#" class="skill-btn pointer-enter"
+              ><span>Accessibility</span></a
+            >
+            <p class="skill-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              delectus!
+            </p>
+          </div>
+          <div class="skill">
+            <a href="#" class="skill-btn pointer-enter"
+              ><span>Responsive Design</span></a
+            >
+            <p class="skill-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              delectus!
+            </p>
+          </div>
+          <div class="skill">
+            <a href="#" class="skill-btn pointer-enter"
+              ><span>JavaScript</span></a
+            >
+            <p class="skill-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              delectus!
+            </p>
+          </div>
+          <div class="skill">
+            <a href="#" class="skill-btn pointer-enter"><span>React</span></a>
+            <p class="skill-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              delectus!
+            </p>
+          </div>
+          <div class="skill">
+            <a href="#" class="skill-btn pointer-enter"><span>Tools</span></a>
+            <p class="skill-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              delectus!
+            </p>
+          </div>
+          <!-- <div class="skill">
           <a href="#" class="skill-btn pointer-enter"><span>Soft Skills</span></a>
           <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, delectus!</p>
         </div> -->
-      </div>
-      <!-- End of Skills -->
-    </section>
-    <!-- End of Section 4 -->
+        </div>
+        <!-- End of Skills -->
+      </section>
+      <!-- End of Section 4 -->
 
-    <!-- Section 5 -->
-    <section class="section-5 center" id="section-5">
-      <!-- Section 5 Heading -->
-      <h1 class="section-heading">Contact</h1>
-      <!-- End of Section 5 Heading -->
+      <!-- Section 5 -->
+      <section class="section-5 center" id="section-5">
+        <!-- Section 5 Heading -->
+        <h1 class="section-heading">Contact</h1>
+        <!-- End of Section 5 Heading -->
 
-      <!-- Form -->
-      <div class="form-wrapper">
-        <h2 class="form-heading">Let's Talk</h2>
-        <form class="contact-form center">
-          <input type="text" class="contact-form-input pointer-enter" placeholder="Name" id="name" autocomplete="off">
-          <p class="message">Error Message</p>
-          <input type="text" class="contact-form-input pointer-enter" placeholder="Email" id="email" autocomplete="off">
-          <p class="message">Erroe Message</p>
-          <input type="text" class="contact-form-input pointer-enter" placeholder="Subject" id="subject"
-            autocomplete="off">
-          <p class="message">Error Message</p>
-          <textarea class="contact-form-input contact-form-textarea pointer-enter" placeholder="Message" id="message"
-            autocomplete="off"></textarea>
-          <p class="message">Error Message</p>
-          <input type="submit" class="form-submit-btn pointer-enter" value="Send Request">
-        </form>
-      </div>
-      <!-- End of Form -->
+        <!-- Form -->
+        <div class="form-wrapper">
+          <h2 class="form-heading">Let's Talk</h2>
+          <form class="contact-form center">
+            <input
+              type="text"
+              class="contact-form-input pointer-enter"
+              placeholder="Name"
+              id="name"
+              autocomplete="off"
+            />
+            <p class="message">Error Message</p>
+            <input
+              type="text"
+              class="contact-form-input pointer-enter"
+              placeholder="Email"
+              id="email"
+              autocomplete="off"
+            />
+            <p class="message">Erroe Message</p>
+            <input
+              type="text"
+              class="contact-form-input pointer-enter"
+              placeholder="Subject"
+              id="subject"
+              autocomplete="off"
+            />
+            <p class="message">Error Message</p>
+            <textarea
+              class="contact-form-input contact-form-textarea pointer-enter"
+              placeholder="Message"
+              id="message"
+              autocomplete="off"
+            ></textarea>
+            <p class="message">Error Message</p>
+            <input
+              type="submit"
+              class="form-submit-btn pointer-enter"
+              value="Send Request"
+            />
+          </form>
+        </div>
+        <!-- End of Form -->
 
-      <!-- Slideshow -->
-      <div class="slideshow">
-        <a href="#" class="slideshow-link">
-          <img src="./images/social-icons/slideshow-img-1.png">
-        </a>
-        <a href="#" class="slideshow-link">
-          <img src="./images/social-icons/slideshow-img-2.png">
-        </a>
-        <a href="#" class="slideshow-link light">
-          <img src="./images/social-icons/slideshow-img-3.png">
-        </a>
-        <a href="#" class="slideshow-link">
-          <img src="./images/social-icons/slideshow-img-4.png">
-        </a>
-        <a href="#" class="slideshow-link">
-          <img src="./images/social-icons/slideshow-img-5.png">
-        </a>
-      </div>
-      <!-- Slideshow -->
-    </section>
-    <!-- End of Section 5 -->
-  </div>
-  <!-- End of Page Container -->
-  <script src="./script.js"></script>
-</body>
-
+        <!-- Slideshow -->
+        <div class="slideshow">
+          <a href="#" class="slideshow-link">
+            <img src="./images/social-icons/slideshow-img-1.png" />
+          </a>
+          <a href="#" class="slideshow-link">
+            <img src="./images/social-icons/slideshow-img-2.png" />
+          </a>
+          <a href="#" class="slideshow-link light">
+            <img src="./images/social-icons/slideshow-img-3.png" />
+          </a>
+          <a href="#" class="slideshow-link">
+            <img src="./images/social-icons/slideshow-img-4.png" />
+          </a>
+          <a href="#" class="slideshow-link">
+            <img src="./images/social-icons/slideshow-img-5.png" />
+          </a>
+        </div>
+        <!-- Slideshow -->
+      </section>
+      <!-- End of Section 5 -->
+    </div>
+    <!-- End of Page Container -->
+    <script src="./script.js"></script>
+  </body>
 </html>
