--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Soloman Garcia | Web Developer</title>
+    <title>Soloman Garcia | Email Developer</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
 
@@ -67,7 +67,7 @@
         <!-- End of Animated Circles -->
 
         <!-- Featured Text -->
-        <h4 class="featured-text featured-text-1">Front-End</h4>
+        <h4 class="featured-text featured-text-1">Email</h4>
         <h4 class="featured-text featured-text-2">Developer</h4>
         <!-- End of Featured Text -->
 
